# AI_Based_Health_Daignostic_System

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: database.py  main.py  models.py
backend/app/routes/: auth.py  diagnose.py  feedback.py
backend/app/schemas/: diagnosis.py  feedback.py  patient.py
backend/app/services/: diagnosis_service.py  ml_service.py  recommendation_service.py  risk_service.py
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: i18n.ts  main.tsx
frontend/src/locales/: bn.json  en.json  es.json  fr.json  gu.json  hi.json  ml.json  mr.json  pa.json  ta.json  te.json
frontend/src/ui/: App.tsx  api.ts  catalog.ts
frontend/src/ui/components/: AdminDashboard.tsx  AnalyticsCharts.tsx  BodyMapSelector.tsx  ButtonChoice.tsx  CheckboxGrid.tsx  FeedbackView.tsx  HistoryView.tsx  LanguageSelector.tsx  LoginModal.tsx  PatientAuthModal.tsx  ResultCards.tsx  StepHeader.tsx
