[project]
name = "health-diagnosis-backend"
version = "0.1.0"
description = "AI-based Health Diagnosis System backend"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "scikit-learn>=1.4",
  "numpy>=1.26",
]

[tool.ruff]
line-length = 100

